--- a/index.html
+++ b/index.html
@@ -90,7 +90,51 @@
                     <div class="carousel-item">
                         <img src="imagenes/6.png" class="d-block w-50 mx-auto" alt="Descripción de Proyecto 5"> <!-- Cambia w-100 a w-50 para ajustar el tamaño -->
                     </div>
-                    
+                    <div class="carousel-item">
+                        <img src="imagenes/6.png" class="d-block w-50 mx-auto" alt="Descripción de Proyecto 6"> <!-- Cambia w-100 a w-50 para ajustar el tamaño -->
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/7.png" class="d-block w-50 mx-auto" alt="Descripción de Proyecto 7"> <!-- Cambia w-100 a w-50 para ajustar el tamaño -->
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/8.png" class="d-block w-50 mx-auto" alt="Descripción de Proyecto 8"> <!-- Cambia w-100 a w-50 para ajustar el tamaño -->
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/9.png" class="d-block w-50 mx-auto" alt="Descripción de Proyecto 9"> <!-- Cambia w-100 a w-50 para ajustar el tamaño -->
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/10.png" class="d-block w-50 mx-auto" alt="Descripción de Proyecto 10"> <!-- Cambia w-100 a w-50 para ajustar el tamaño -->
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/11.png" class="d-block w-50 mx-auto" alt="Descripción de Proyecto 11"> <!-- Cambia w-100 a w-50 para ajustar el tamaño -->
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/12.png" class="d-block w-50 mx-auto" alt="Descripción de Proyecto 12"> <!-- Cambia w-100 a w-50 para ajustar el tamaño -->
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/13.png" class="d-block w-50 mx-auto" alt="Descripción de Proyecto 13"> <!-- Cambia w-100 a w-50 para ajustar el tamaño -->
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/14.png" class="d-block w-50 mx-auto" alt="Descripción de Proyecto 14"> <!-- Cambia w-100 a w-50 para ajustar el tamaño -->
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/15.png" class="d-block w-50 mx-auto" alt="Descripción de Proyecto 15"> <!-- Cambia w-100 a w-50 para ajustar el tamaño -->
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/16.png" class="d-block w-50 mx-auto" alt="Descripción de Proyecto 16"> <!-- Cambia w-100 a w-50 para ajustar el tamaño -->
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/17.png" class="d-block w-50 mx-auto" alt="Descripción de Proyecto 17"> <!-- Cambia w-100 a w-50 para ajustar el tamaño -->
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/18.png" class="d-block w-50 mx-auto" alt="Descripción de Proyecto 18"> <!-- Cambia w-100 a w-50 para ajustar el tamaño -->
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/19.png" class="d-block w-50 mx-auto" alt="Descripción de Proyecto 19"> <!-- Cambia w-100 a w-50 para ajustar el tamaño -->
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagenes/20.png" class="d-block w-50 mx-auto" alt="Descripción de Proyecto 20"> <!-- Cambia w-100 a w-50 para ajustar el tamaño -->
+                    </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-target="#imageCarousel" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
