--- a/index.html.html
+++ b/index.html.html
@@ -32,7 +32,7 @@
                     <img src="imagenes/1.png" class="img-fluid rounded-circle" alt="Mi foto de perfil">
                 </div>
                 <div class="col-md-8">
-                    <p class="mt-5">¡Hola! Acá Marcos Fernández, Técnico Universitario en Comunicador Social con orientación Audiovisual y Profesor Universitario en Comunicación Social. Apasionado por la producción de videos y la escritura creativa. Actualmente me estoy especializando en Marketing Digital y Desarrollo Web en Coderhouse. Aquí podés ver algunos de mis trabajos y proyectos recientes.</p>
+                    <p class="mt-5">¡Hola! Acá Marcos Fernández, Técnico Universitario en Comunicación Social con orientación Audiovisual y Profesor Universitario en Comunicación Social. Apasionado por la producción de videos y la escritura creativa. Actualmente me estoy especializando en Marketing Digital y Desarrollo Web en Coderhouse. Aquí podés ver algunos de mis trabajos y proyectos recientes.</p>
                 </div>
             </div>
         </section>
